# KarmaBhumi

./: .env.example  .gitignore  README.md  docker-compose.yml  migrate_enums.py  rename_structs.py  rename_structs2.py  rename_trade.py
.devcontainer/: devcontainer.json
backend/: .env.example  Dockerfile  alembic.ini  config.py  exchange_pb2.py  exchange_pb2_grpc.py  grpc_client.py  main.py  requirements.txt  test_httpx.py
backend/api/: websocket.py
backend/api/routes/: admin.py  auth.py  bots.py  market.py  orders.py  portfolio.py  replay.py
backend/db/: database.py  models.py
backend/db/migrations/: env.py  script.py.mako
backend/db/migrations/versions/: 0001_initial.py
backend/kafka/: consumer.py
backend/monitoring/: metrics.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Analytics.module.css  Analytics.tsx  BotActivity.module.css  BotActivity.tsx  Chart.module.css  Chart.tsx  LatencyMonitor.module.css  LatencyMonitor.tsx  MarketSelector.module.css  MarketSelector.tsx  OrderBook.module.css  OrderBook.tsx  OrderForm.module.css  OrderForm.tsx  Sidebar.module.css  Sidebar.tsx  TradesFeed.module.css  TradesFeed.tsx
frontend/src/hooks/: useAuth.ts  useWebSocket.ts
frontend/src/pages/: Admin.module.css  Admin.tsx  Dashboard.module.css  Dashboard.tsx  Login.module.css  Login.tsx  Portfolio.module.css  Portfolio.tsx  Replay.module.css  Replay.tsx
frontend/src/styles/: globals.css
matching-engine/: CMakeLists.txt  Dockerfile
matching-engine/src/: grpc_server.cpp  grpc_server.hpp  kafka_producer.cpp  kafka_producer.hpp  main.cpp  market_simulator.hpp  matching_engine.cpp  matching_engine.hpp  metrics.cpp  metrics.hpp  order_book.cpp  order_book.hpp  risk_engine.cpp  risk_engine.hpp  types.hpp
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: exchangex.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
proto/: exchange.proto
scripts/: load_test.py  seed_data.py
